Project

General

Profile

Actions

Bug #7062

closed

Rdoc for String#=~

Bug #7062: Rdoc for String#=~

Added by stomar (Marcus Stollsteimer) about 14 years ago. Updated almost 14 years ago.

Status:
Closed
Assignee:
Target version:
ruby -v:
ruby 1.9.3p194 (2012-04-20 revision 35410) [i686-linux]
Backport:
[ruby-core:47668]

Description

=begin
This patch clarifies the different behaviour for str =~ regexp and regexp =~ str regarding captured strings and assigning to local variables. (See also issue #7042.)

Added text:

Note: str =~ regexp is not the same as
regexp =~ str. Strings captured from named capture groups
are not assigned to local variables in the first case.
=end


Files

rdoc_for_string_match.patch (592 Bytes) rdoc_for_string_match.patch stomar (Marcus Stollsteimer), 09/24/2012 04:46 AM
Actions

Also available in: PDF Atom