* string.c (rb_str_match):   Clarify behavior for captured strings and local variable assignment   Patch by Marcus Stollsteimer [ruby-dev:47668] [Bug #7062]

git-svn-id: http://svn.ruby-lang.org/repos/ruby/trunk@37109 b2dd03c8-39d4-4d8f-98ff-823fe69b080e